--- a/client/style.css
+++ b/client/style.css
@@ -8,7 +8,7 @@ h1 {
     color: #8a8a8a;
 }
 
-.grid-container {
+#grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
@@ -23,28 +23,27 @@ h1 {
 
 img {
     position: absolute;
-    object-fit: cover;
-    min-width: 100%;
-    height: auto;
-    color: white;
+
+    /* Fix this ugly image stretching! */
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 600px) {
-    .grid-container {
+    #grid-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 300px) {
-    .grid-container {
+    #grid-container {
         grid-template-columns: 1fr;
     }
 }
 
 .input-field {
-    width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 0px;
     box-sizing: border-box;
 
     border: 2px solid #313131;
@@ -52,6 +51,9 @@ img {
 
     background-color: #161616;
     color: white;
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 label {
@@ -60,22 +62,33 @@ label {
     color: #8a8a8a; 
 }
 
-.apply-button {
+#import-button {
     margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 10px;
-    display: flex;
+    padding: 12px 50px;
 
     background-color: transparent;
     color: #8a8a8a;
-    border: 1px solid #8a8a8a;
-    border-radius: 15px;
+    border: 2px solid #8a8a8a;
+    border-radius: 4px;
+
 }
 
-.apply-button:hover {
+#import-button:hover {
     background-color: #8a8a8a;
     color: #232323;
 
     cursor: pointer;
 }
+
+
+#url-input-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#url-input {
+    flex-grow: 1;
+}
+
