--- a/client/style.css
+++ b/client/style.css
@@ -17,16 +17,33 @@ h1 {
 .grid-item {
     width: 100%;
     padding-bottom: 56.25%;
-    background-color: black;
+    background-color: #161616;
     position: relative;
+    object-fit: contain;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.grid-item:hover img {
+    filter: brightness(70%);
+}
+
+.hidden-icon {
+    opacity: 0;
+    transition: 0.2s;
+}
+.grid-item:hover .hidden-icon {
+    opacity: 1;
 }
 
 img {
+    transition: 0.2s;
     position: absolute;
-
-    /* Fix this ugly image stretching! */
-    width: 100%;
-    height: 100%;
+    
+    /* Fix thumbnails not being centered! */
+    min-width: 100%;
+    min-height: 100%;
 }
 
 @media (max-width: 600px) {
