--- a/client/style.css
+++ b/client/style.css
@@ -11,21 +11,22 @@ h1 {
 #grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 5px;
+    grid-gap: 8px;
 }
 
 .grid-item {
     width: 100%;
     padding-bottom: 56.25%;
-    background-color: #161616;
     position: relative;
     object-fit: contain;
     overflow: hidden;
     display: flex;
     justify-content: center;
+    border-radius: 3px;
+
 }
 
-.grid-item:hover img {
+.grid-item:hover .thumbnail {
     filter: brightness(70%);
 }
 
@@ -35,6 +36,19 @@ h1 {
 }
 .grid-item:hover .hidden-icon {
     opacity: 1;
+}
+
+.thumbnail {
+    transition: 0.2s;
+    position: absolute;
+    
+    /* Fix thumbnails not being centered! */
+    width: 100%;
+    height: 100%;
+    
+    object-fit:cover;
+
+    background-image: url('C:/Users/Mark/AppData/Roaming/Adobe/CEP/extensions/google-drive-importer/client/transparent-background.svg');
 }
 
 img {
