--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #232323;
+    color: white;
 }
 
 h1 {
@@ -7,6 +8,7 @@ h1 {
     text-align: center;
     color: #8a8a8a;
 }
+
 
 #grid-container {
     display: grid;
@@ -93,19 +95,30 @@ label {
     color: #8a8a8a; 
 }
 
-#import-button {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 12px 50px;
-
+.button {
     background-color: transparent;
     color: #8a8a8a;
     border: 2px solid #8a8a8a;
     border-radius: 4px;
-
+    padding: 12px 50px;
 }
 
-#import-button:hover {
+#auth-button {
+    display: block;
+    margin: auto;
+}
+
+#submit-code-button {
+    display: block;
+    margin: auto;
+}
+
+#import-button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button:hover {
     background-color: #8a8a8a;
     color: #232323;
 
@@ -114,7 +127,7 @@ label {
 
 
 #url-input-container {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     justify-content: center;
 }
